--- a/index.html
+++ b/index.html
@@ -363,15 +363,10 @@
               <p>*** The volume of this video can be loud in certain moments, watch with caution***</p>
               <video controls>
                 <source
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26401cb4-73b4-432b-ab34-abac013a4e2b"
+                  src="https://iad.cdn.nv.instructuremedia.com/originals/o-3L6xePSPDjZgzE9x815rFXsDYqzDSwhr/transcodings/t-3MZ6jGhTfqLpDk8vfbz359FtPdsBysAX.mp4?&Expires=1589033589&Signature=SVB55a-W8-vnUU1xHXlypLqmMBmaykCROolx1QgApx-lh~LWCc24BcpNI91j~17RxVy1Mv71jFthO-BafeY2yQiIcD1MokflBy-lw7YCVKKSJzjoBgt3jLKUvkBrkg6iMtQG9fknX4nLw03SSNPnIKzblvmeIEC1ggfjJ9ethXBMru1MCBifDFKfFkvb47XHFxqlhKmrF73q5zmosqHxzCI1T48nRGwxKj780g5px54LmvLZ6AP2AWS1SUKeubd4fOySK9BoJlta1oq5gqIhgZtQqxz9KAp07pvYqOSpR~Bqpg7vKWnAKE1~jS1cbloc-k0UpTc6CHkYeWtrGDFAsg__&Key-Pair-Id=APKAJLP4NHW7VFATZNDQ"
                   width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
                 </source>
               </video>
-              <!-- <p><iframe style="width: 720px; height: 405px;" title="A&amp;T Final Project Documentation"
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D26401cb4-73b4-432b-ab34-abac013a4e2b"
-                  width="720" height="405" allowfullscreen="allowfullscreen"
-                  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
-                  allow="autoplay *"></iframe></p>-->
               <p>&nbsp;</p>
               <p><span style="text-decoration: underline;">Electronic Component:</span></p>
               <p><img
@@ -444,50 +439,10 @@
                 sculptures for inaccessible plug in my house and while they may have been fun to make there was still
                 the issue of having the struggle to plug them in in the first place. At that point, the solution dawned
                 on me what if you only ever had to plug your phone once and never have to go without charge again...</p>
-              <video controls>
-                <source
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D1653a0ca-79ff-4a3c-8e80-abad016a383f"
-                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
-                </source>
-              </video>
-              <video controls>
-                <source
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D95fe7f04-9966-4fb3-94e2-abad016a8ac3"
-                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
-                </source>
-              </video>
-              <video controls>
-                <source
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3Db6e116d4-b19f-4ef8-88f4-abad01699339"
-                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
-                </source>
-              </video>
-              <video controls>
-                <source
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D6e512e0f-5b9c-4ecd-bdf5-abad016b0081"
-                  width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
-                </source>
-              </video>
-              <!--<p><iframe style="width: 720px; height: 405px;" title="IMG_2744"
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D1653a0ca-79ff-4a3c-8e80-abad016a383f"
-                  width="720" height="405" allowfullscreen="allowfullscreen"
-                  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
-                  allow="autoplay *"></iframe></p>
-              <p><iframe style="width: 720px; height: 405px;" title="IMG_2745"
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D95fe7f04-9966-4fb3-94e2-abad016a8ac3"
-                  width="720" height="405" allowfullscreen="allowfullscreen"
-                  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
-                  allow="autoplay *"></iframe></p>
-              <p><iframe style="width: 720px; height: 405px;" title="IMG_2747"
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3Db6e116d4-b19f-4ef8-88f4-abad01699339"
-                  width="720" height="405" allowfullscreen="allowfullscreen"
-                  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
-                  allow="autoplay *"></iframe></p>
-              <p><iframe style="width: 720px; height: 405px;" title="IMG_2439"
-                  src="https://saic.instructure.com/courses/2644787/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2Fsaic.hosted.panopto.com%2FPanopto%2FLTI%2FLTI.aspx%3Fcustom_context_delivery%3D6e512e0f-5b9c-4ecd-bdf5-abad016b0081"
-                  width="720" height="405" allowfullscreen="allowfullscreen"
-                  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
-                  allow="autoplay *"></iframe></p>-->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/b2JBwlCK87o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/EWKeNSqHacc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/7Y25HThYPE0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QL7C9TuqKm8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </finalDiv>
             <!--jingzhou-->
             <finalDiv class="hidden mt-6" id="jingzhou_final" class="ab">
@@ -533,7 +488,7 @@
               <p><span style="font-size: 14pt;"><strong>Life Clock </strong>(1 Minute)</span></p>
               <video controls>
                 <source
-                  src="https://notorious-prod.s3.amazonaws.com/originals/o-U9iMunx8dvVAuYAPvNKBhRTs64SNQ81.mp4?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=ASIAZIHRSNQUPDR2L7XC%2F20200507%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20200507T172909Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEIn%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJIMEYCIQDN9gffODGq7gQqKYGTYa7TvI383Wh24UhapwKH8M6e7QIhAOGhB28QKXNxXt83HLCAcrZo8Z%2FMWBvlosvzZOofJBf0Kr0DCML%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEQAhoMNjM2MTYxNzgwNzc2IgzivIBZqmzpVuxECtkqkQOgDj2%2FjrC3e1jnAkjxQr2arpHCpeYC6sgHiU3%2FKjCq2pkVy%2FERpDc6KH8Sp57Mht67iUS4StAbIRarzJARrznyM9y%2BOJ3X7qI7%2B3FyPL3e9DAjet2TR87aclwvoXl%2BVLniD5kDyxeGxkkIjEdwpD7oeJ3J9YRWWQdjdqeIN%2BG%2BiURa8BG3jNTchI0AftOVvUlqYV5WlW7UMUHT6RFjEXbvQK6KjwZ2kjhQL1Yj5lKQMyCkDnf38nRBG9Xl5VwQSp%2FL9ET16CZUYP3SPWfTQXPhyZkPJeLfdq8FBXbPGA2ZrAVvXkCCg7jdo%2Bzp%2B7mrDVxc%2Bzg7k7LFFYOtJImQQgxchrw%2FJ9sertq3Bo2vhQWat68C%2FNOcR5%2FFu%2FTjRcTbHm8L%2BQ5C1cZXLnRp9prAJ1svrxWmbVYnUEE3iedTNRfkNw84gB31%2Bvbo1%2FlgYJMsXcTRk3fS5U7D3CVNCKiLYPq8z5kKltJEBe%2BNdWPEIn4Bn0b2dsLvp3fnNp3Pm47p%2F11RkJo5i6dJbZa%2BrlNAnWDveDCt79D1BTrqAcV6A0G2JtWrrcoM3EbD%2BC3ra1OHlSClHHxzS8z5ODSV0QS%2BNu22HGxqnQRmBnOOD0Wttbegc6ZEOQ9jieTcEfO8F0PwN3eNKjlTf3EXJW3Z8OXSDmNUtSbI7tYXHDup%2BjXciPSyNjr27YIPs40ts0EuVxgj2A2Gb01bnVDT3LKf2W%2FSGucIv0eAAr%2FQhaxMXGlerd8XyOssSYI3npU16zyHhmCn7G%2FN5XuEbRSJRhs2tVRw0uUBhJGo3x%2BPTiJmtYK9dKu0xNAzCnT0XF5jddVTR51J9xAxaDlve%2BchdQBaRC%2FEVof4xI9NJw%3D%3D&X-Amz-Signature=ed54e4c21c1103698478ae46f21e4ec8ccf738b1a3f582165342e334d8f08307"
+                  src="https://iad.cdn.nv.instructuremedia.com/originals/o-U9iMunx8dvVAuYAPvNKBhRTs64SNQ81/transcodings/t-UWurzG37zsU31itciKW3K76HzNk8PoV.mp4?&Expires=1589033415&Signature=RAv3xWFrmBFn8kL2vqFUvE39iNmcmlM-wYmBnUMKJVo6UTQugxuHfQCjIHO0AHgDgR4NLUnJvYbSQd7Xo-2OXKr3itZeDAC4L-guhjLHTb87s4-7TDTF4SuRs95P9ueZCCDVESXGl-WdwKcgatBWR76~5P2lX6PRg-bC6PDtRIDyFQ5SHVsNJo8CrECdKoRA3gykRsFgDrtdUPMTxSuGGM6xLPkRZjd5aAihD~~BW0X8krWIREU37ZETfvqzPSuiu254e7mKElPZenm307nwGmoja7vXJM-~VMogRQRfhJCoqTdtWR~kGVGHT05pnIjRB~AYLBaF0mUem1fWszd77g__&Key-Pair-Id=APKAJLP4NHW7VFATZNDQ"
                   width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
                 </source>
               </video>
