--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 compliment is now a piece of you. It&rsquo;s a building block in the puzzle of life and shows how we are
                 all connected even in quarantine.</p>
               <p>&nbsp;</p>
-              <iframe src="https://editor.p5js.org/yana.coop103/embed/C5IRwYB4W"></iframe>
+              <iframe src="https://editor.p5js.org/yana.coop103/embed/C5IRwYB4W" width= "500" height="900"></iframe>
               <p>Project Link: <a title="Link" href="https://editor.p5js.org/yana.coop103/sketches/C5IRwYB4W"
                   target="_blank" rel="noopener">https://editor.p5js.org/yana.coop103/sketches/C5IRwYB4W</a></p>
 
@@ -594,12 +594,12 @@
 
               <video controls>
                 <source
-                  src="https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVQ5UHl3SE1Hd3JCOFBLc2w0PS0tN2Q0N2YzMWY3OTFkMmVlMDNiZmMyOGFkOTRlNzYxY2RlMDYzNjdhMg.mp4">
+                  src="https://iad.cdn.nv.instructuremedia.com/originals/o-5XkueiqsHkwa2PLpaNVuYSyKQvMC6cwh/transcodings/t-5Xv4we63eQXXQbXDWXqDKe1oPceeH2tU.mp4?&Expires=1589034907&Signature=HY5wcu2vrtBBQW0lveCyfOnP~YRsSaYF8mWdX-IHuxYvIl-nnkuRdGPhPW9CPjDpuC~pK7whCUdFIBFM4Axp5AsmRhw4PryTZ~GlXP3An0E37iKtBgUmQmlDVkqfien1m0ct0UY8~oyLcWwsdAzWQbCVkQYOF0WNbDNjyHGC--6I7J0x3fnQn0PTDZBT9D2PkWpuVdzEM9yV9yxjD-0T~O467HUqz2gr54W-xJM4Hdtv~zCr7NZLYhDYcpqYdzMHOQoua8m~OXAw2svmHg7kqHubD~EPSt8Guw~HZ-JbLV655DMUz-uE75XW~2gcMKgNFlanSCWuc3zr3g54GW~zLA__&Key-Pair-Id=APKAJLP4NHW7VFATZNDQ">
                 width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
               </video>
               <video controls>
                 <source
-                  src="https://nv.instructuremedia.com/fetch/QkFoYkIxc0hhUVQ2UHl3SE1Hd3JCMExMc2w0PS0tZTJmYWRkYzQ3NzdlMjZkZjdhYzY4MzhmMGU1NTMyNGM4MWNjNTIwNg.mp4">
+                  src="https://iad.cdn.nv.instructuremedia.com/originals/o-5XaLQugyybxQeorvitRJ8DP3kuzQTfEN/transcodings/t-5Xh8H6gRJLac9cnkAMhtAuZyGEsPueZF.mp4?&Expires=1589034979&Signature=q0oNyCp3Cw0bC-qfBrNtS1lSQvkxnw79SvD9U8yWPNhYhmT8bl7CogWLNEnGgAXHCcmWk3Hyz6esqF22aamFy7Hc7w9uqPyWc8zvzNc0DiBe50GbVt6cf4PqUAYayKLLWBguW31M9D9oDxqMiyhExK69qYcXb~ef~yRDRxuAMaHlvAaeOkwyT8sdKHOIzRx4axldfS-gn7n7HU4BBBGX66dcvQEDF073yl8YdiS5wWDug~BCop8mxDgZfYiyKxUKSchPrn9EZ8sr9SFXRsSedHjQQX5oGeyq1Jj87OY2enZ3OymsgUN43sNChiazx98C8nb6b0Cozt-5LM-rEDCo4Q__&Key-Pair-Id=APKAJLP4NHW7VFATZNDQ">
                 width=720 height=405 style="border: 1px solid #464646;" allowfullscreen></source>
               </video>
 
@@ -820,8 +820,7 @@
                 everyone continues the meeting normally. No one reacts to your entrance. Why is that?</p>
               <p>&nbsp;</p>
               <p>link below:</p>
-              <p><a
-                  href="https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/">https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/</a>
+              <p><a href="https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/">https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/</a>
               </p>
               <p>(It'd take a while for the video to load, so seeing a blank page at the first couple seconds is
                 completely normal. If your current browser is taking forever,</p>
