--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <p>&nbsp;</p>
               <iframe src="https://editor.p5js.org/yana.coop103/embed/C5IRwYB4W" width= "500" height="900"></iframe>
               <p>Project Link: <a title="Link" href="https://editor.p5js.org/yana.coop103/sketches/C5IRwYB4W"
-                  target="_blank" rel="noopener">https://editor.p5js.org/yana.coop103/sketches/C5IRwYB4W</a></p>
+                  target="_blank" rel="noopener" class="text-blue-500">https://editor.p5js.org/yana.coop103/sketches/C5IRwYB4W</a></p>
 
               </p>
             </finalDiv>
@@ -264,7 +264,7 @@
               </video>
 
               <p>P5js link to the code: <a href="https://editor.p5js.org/Cathyzhang126/sketches/lMVa7LhgZ"
-                  target="_blank" rel="noopener">https://editor.p5js.org/Cathyzhang126/sketches/lMVa7LhgZ</a></p>
+                  target="_blank" rel="noopener" class="text-blue-500">https://editor.p5js.org/Cathyzhang126/sketches/lMVa7LhgZ</a></p>
             </finalDiv>
             <!--cher-->
             <finalDiv class="hidden mt-6" id="cher_final" class="ab">
@@ -276,11 +276,6 @@
                   width=720 height=405 style="border: 1px solid #464646;" allowfullscreen>
                 </source>
               </video>
-              <!--<p><iframe style="width: 400px; height: 250px; display: inline-block;"
-                  title="Video player for finalats.mp4" data-media-type="video"
-                  src="https://saic.instructure.com/media_objects_iframe/m-2ZJZodA5LofGwroXeqFuMdvb4pX7toFJ?type=video"
-                  allowfullscreen="allowfullscreen" allow="fullscreen"
-                  data-media-id="m-2ZJZodA5LofGwroXeqFuMdvb4pX7toFJ"></iframe></p>-->
               <p>&nbsp;</p>
               <p>This untitled piece is a handshake between an Arduino Uno potentiometer circuit and p5.js code that
                 allows the viewer to change the frequency at which the webcam feed is distorted. The live feed, at the
@@ -290,7 +285,7 @@
                 own in order to use their webcam and experience the handshake itself.</p>
               <p>&nbsp;</p>
               <p>Link to sketch: <a
-                  href="https://editor.p5js.org/chermfeng/sketches/bEjstpuQd">https://editor.p5js.org/chermfeng/sketches/bEjstpuQd</a>
+                  href="https://editor.p5js.org/chermfeng/sketches/bEjstpuQd" class="text-blue-500">https://editor.p5js.org/chermfeng/sketches/bEjstpuQd</a>
               </p>
             </finalDiv>
             <!--chloe-->
@@ -302,7 +297,7 @@
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/9068821/files/170128450"
                   data-api-returntype="File" /></p>
               <p><strong>Here is the link for the interactive webpage: </strong><a
-                  href="https://editor.p5js.org/Cthomp7/full/GuEOwxKhR">https://editor.p5js.org/Cthomp7/full/GuEOwxKhR</a>
+                  href="https://editor.p5js.org/Cthomp7/full/GuEOwxKhR" class="text-blue-500">https://editor.p5js.org/Cthomp7/full/GuEOwxKhR</a>
               </p>
               <p>&nbsp;</p>
               <p><span style="text-decoration: underline;"><span
@@ -377,7 +372,7 @@
               <p>&nbsp;</p>
               <p><span style="text-decoration: underline;">Digital Component:</span></p>
               <p><span>P5.js sketch: <a href="https://editor.p5js.org/haruhi_234/sketches/LEcPdjH_G" target="_blank"
-                    rel="noopener">https://editor.p5js.org/haruhi_234/sketches/LEcPdjH_G</a></span></p>
+                    rel="noopener" class="text-blue-500">https://editor.p5js.org/haruhi_234/sketches/LEcPdjH_G</a></span></p>
             </finalDiv>
             <!--jeff-->
             <finalDiv class="hidden mt-6" id="jeff_final" class="ab">
@@ -479,7 +474,7 @@
             <!--lauren-->
             <finalDiv class="hidden mt-6" id="lauren_final" class="ab">
               <p>click link, doesn't work on mobile, computers only</p>
-              <a href="https://lechas.wixsite.com/arttechfinal ">https://lechas.wixsite.com/arttechfinal </a>
+              <a href="https://lechas.wixsite.com/arttechfinal " class="text-blue-500">https://lechas.wixsite.com/arttechfinal </a>
             </finalDiv>
             <!--lucas-->
             <finalDiv class="hidden mt-6" id="lucas_final" class="ab">
@@ -563,8 +558,7 @@
                       alt="Screen Shot 2020-04-29 at 2.39.25 PM-1.png" width="640" height="587"
                       data-api-endpoint="https://saic.instructure.com/api/v1/users/9117452/files/170055951"
                       data-api-returntype="File" /></strong></span></p>
-              <p>Test: <a
-                  href="https://editor.p5js.org/OsW/sketches/ZxiFyuKLa">https://editor.p5js.org/OsW/sketches/ZxiFyuKLa</a>
+              <p>Test: <a href="https://editor.p5js.org/OsW/sketches/ZxiFyuKLa" class="text-blue-500">https://editor.p5js.org/OsW/sketches/ZxiFyuKLa</a>
                 (Need to use together with Arduino)</p>
             </finalDiv>
             <!--ravi-->
@@ -590,7 +584,7 @@
             <finalDiv class="hidden mt-6" id="rong_final" class="ab">
               <h2>Invisible doorsill:</h2>
               <p><a href="https://editor.p5js.org/RongBao/present/aEEnp00ef" target="_blank"
-                  rel="noopener">https://editor.p5js.org/RongBao/present/aEEnp00ef</a>&nbsp;</p>
+                  rel="noopener" class="text-blue-500">https://editor.p5js.org/RongBao/present/aEEnp00ef</a>&nbsp;</p>
 
               <video controls>
                 <source
@@ -653,7 +647,7 @@
                   data-api-returntype="File" /></p>
               <p>&nbsp;</p>
               <p>The original plan involved pulling data from the <a href="https://developer.climacell.co/v3/reference"
-                  target="_blank" rel="noopener">climacell</a> API to generate corresponding animations.<br /><br />The
+                  target="_blank" rel="noopener" class="text-blue-500">climacell</a> API to generate corresponding animations.<br /><br />The
                 gifs below represent the five absolute states (clear, snow, rain, cloudy, fog), as well as
                 the<br />state in transition from sunset to sunrise to sunset (sped up).&nbsp;</p>
               <p>&nbsp;</p>
@@ -740,7 +734,7 @@
                 still be easily found, especially the ones using(holding) the Apple. "Thanks to the APPLE!"</p>
               <p>my sketch:</p>
               <p><a href="https://editor.p5js.org/sanding666/present/Y3_HUXaWC" target="_blank"
-                  rel="noopener noreferrer">https://editor.p5js.org/sanding666/present/Y3_HUXaWC</a></p>
+                  rel="noopener noreferrer" class="text-blue-500">https://editor.p5js.org/sanding666/present/Y3_HUXaWC</a></p>
               <iframe src="https://editor.p5js.org/sanding666/embed/Y3_HUXaWC" width="400" height="400"></iframe>
             </finalDiv>
             <!--sarah-->
@@ -777,7 +771,7 @@
                   alt="children reading givingtree.jpg" width="600" height="441"
                   data-api-endpoint="https://saic.instructure.com/api/v1/users/8603319/files/170380947"
                   data-api-returntype="File" /></p>
-              <p><a href="https://editor.p5js.org/sarahkim711/sketches/7wCwCGQE1" target="_blank" rel="noopener">Example
+              <p><a href="https://editor.p5js.org/sarahkim711/sketches/7wCwCGQE1" target="_blank" rel="noopener" class="text-blue-500">Example
                   1 of The Giving Tree </a></p>
               <p><iframe src="https://editor.p5js.org/sarahkim711/embed/7wCwCGQE1" width="840" height="553"></iframe>
               </p>
@@ -804,7 +798,7 @@
                 "Shape of your heart" to fit the current outcome.&nbsp;</p>
               <br>
               <p>Link to my p5js sketch: <a href="https://editor.p5js.org/Chainkush/sketches/OOJsDX-B9" target="_blank"
-                  rel="noopener">https://editor.p5js.org/Chainkush/sketches/OOJsDX-B9</a></p>
+                  rel="noopener"class="text-blue-500">https://editor.p5js.org/Chainkush/sketches/OOJsDX-B9</a></p>
               <br>
               <iframe src="https://player.vimeo.com/video/416088646" width="640" height="360" frameborder="0"
                 allow="autoplay; fullscreen" allowfullscreen></iframe>
@@ -820,7 +814,7 @@
                 everyone continues the meeting normally. No one reacts to your entrance. Why is that?</p>
               <p>&nbsp;</p>
               <p>link below:</p>
-              <p><a href="https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/">https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/</a>
+              <p><a href="https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/" class="text-blue-500">https://winniewyc2020.github.io/Zoom-Out-Finals-Winnie/</a>
               </p>
               <p>(It'd take a while for the video to load, so seeing a blank page at the first couple seconds is
                 completely normal. If your current browser is taking forever,</p>
